Added new directives

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -121,6 +122,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -141,6 +143,9 @@
         <script src="scripts/controllers/messages.js"></script>
         <script src="scripts/controllers/projects.js"></script>
         <script src="scripts/controllers/examples.js"></script>
+        <script src="scripts/controllers/project.js"></script>
+        <script src="scripts/directives/activeLink.js"></script>
+        <script src="scripts/directives/toggleAside.js"></script>
         <!-- endbuild -->
 </body>
 </html>
